<resources>
    <string name="app_name">Hitch</string>
    <string name="title_activity_test">Map</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="go">Go!</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="confirm">Confirm</string>
    <string name="find_rides">Find Rides</string>
    <string name="pick_up">Pick Up</string>
    <string name="drop_off">Drop Off</string>
    <string name="withing_mils">Within {} Miles</string>
    <string name="depart_at">Depart At</string>
    <string name="arrive_by">Arrive By</string>
    <string name="am">a.m.</string>
    <string name="pm">p.m.</string>
    <string name="within">Within</string>
    <string name="miles_of">Miles Of</string>
    <string name="default_precision">0.25</string>
    <string name="update">Update</string>
    <string name="from_address">From {}</string>
    <string name="to_address">To {}</string>
    <string name="ride_info">With {} at {}</string>
    <string name="accept_ride">Accept Ride</string>
    <string name="drop_off_at">And With Dropoff At</string>
</resources>
