<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- banner on top -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/hitch_banner"/>
    <!-- username textview -->
    <TextView
        android:id="@+id/username_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username" />
    <!-- username entry -->
    <EditText
        android:id="@+id/username_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"/>
    <!-- password textview -->
    <TextView
        android:id="@+id/password_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password" />
    <!-- align password field and "Go!" button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- password entry -->
        <EditText
            android:id="@+id/password_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
        <!-- password submit button -->
        <Button
            android:id="@+id/password_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go"
            android:onClick="onPasswordSubmitted"/>
    </LinearLayout>
    <!-- button to create an account -->
    <Button
        android:id="@+id/create_account_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:onClick="onCreateDialog"/>

</LinearLayout>