<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ride_filter_config"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <!-- displays "Find Rides" in the top left of the layout -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp"
        android:text="@string/find_rides"
        android:textSize="25sp"/>
    <!-- row of UI elements for entering precision and start address -->
    <LinearLayout
        android:id="@+id/source_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/title"
        android:layout_margin="5dp"
        android:layout_alignLeft="@+id/title">
        <!-- "Within" -->
        <TextView
            android:id="@+id/within_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/within"
            android:layout_gravity="center_vertical"
            android:textSize="15sp"/>
        <!-- enter precision -->
        <EditText
            android:id="@+id/precision_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_precision"
            android:inputType="numberDecimal"
            android:layout_gravity="center_vertical"/>
        <!-- "Miles of" -->
        <TextView
            android:id="@+id/miles_of_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/miles_of"
            android:layout_gravity="center_vertical"
            android:textSize="15sp"/>
        <!-- enter pick up address -->
        <AutoCompleteTextView
            android:id="@+id/pick_up_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <!-- row of UI elements for configuring drop off -->
    <LinearLayout
        android:id="@+id/dest_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/source_row"
        android:layout_margin="5dp"
        android:layout_alignLeft="@+id/title">
        <!-- "Drop Off" -->
        <TextView
            android:id="@+id/drop_off_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drop_off_at"
            android:layout_gravity="center_vertical"/>
        <!-- enter drop off address -->
        <AutoCompleteTextView
            android:id="@+id/drop_off_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <!-- button in bottom right corner that allows user to confirm any filter changes -->
    <Button
        android:id="@+id/update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dest_row"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/update"/>
</RelativeLayout>